--- a/src/index.css
+++ b/src/index.css
@@ -68,21 +68,19 @@ button:focus-visible {
   }
 }
 
+/* 滚动槽 */
 ::-webkit-scrollbar {
-  width: 15px;
-  height: 15px;
+  width: 6px;
+  height: 6px;
 }
-
 ::-webkit-scrollbar-track {
-  border: 1px solid #319795;
-  border-radius: 15px;
+  border-radius: 3px;
+  background: rgba(0,0,0,0.06);
+  -webkit-box-shadow: inset 0 0 5px rgba(0,0,0,0.08);
 }
-
+/* 滚动条滑块 */
 ::-webkit-scrollbar-thumb {
-  background: #319795;
-  border-radius: 15px;
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background: #319795;
+  border-radius: 3px;
+  background: rgba(0,0,0,0.12);
+  -webkit-box-shadow: inset 0 0 10px rgba(0,0,0,0.2);
 }
